--- a/Users/senth/eclipse-workspace/Team6_Phase2_LMSAPIRestAssured/pom.xml
+++ b/Users/senth/eclipse-workspace/Team6_Phase2_LMSAPIRestAssured/pom.xml
@@ -101,6 +101,19 @@
     <artifactId>log4j-api</artifactId>
     <version>2.20.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>2.0.9</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.9</version>
+		</dependency>
 <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
 <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
 			<dependency>
