--- a/Users/senth/eclipse-workspace/Team6_Phase2_LMSAPIRestAssured/Users/senth/eclipse-workspace/Team6_Phase2_LMSAPIRestAssured/.classpath
+++ b/Users/senth/eclipse-workspace/Team6_Phase2_LMSAPIRestAssured/Users/senth/eclipse-workspace/Team6_Phase2_LMSAPIRestAssured/.classpath
@@ -24,9 +24,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 21.0.1 [21.0.1]">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-9">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
